# EigenVault

./: .env.example  .gitignore  README.md  backend_test.py  eigenvault_test_report.json  test_result.md
EigenVault-main/: .gitmodules
EigenVault-main/eigenvault/: foundry.toml
EigenVault-main/eigenvault/scripts/: deploy-local.sh
circuits/: order_matching.circom  privacy_proof.circom  test_simple.circom
circuits/scripts/: compile.sh  generate_proof.sh  setup.sh
docker/: docker-compose.yml  frontend.Dockerfile  operator.Dockerfile
docs/: ARCHITECTURE.md  DEPLOYMENT.md
eigenvault/: .env.example  package.json
eigenvault/cache/: solidity-files-cache.json  test-failures
eigenvault/contracts/script/: DeployEigenVault.s.sol  RegisterOperator.s.sol
eigenvault/contracts/src/: EigenVaultBase.sol  EigenVaultHook.sol  EigenVaultHook.sol.bak  EigenVaultServiceManager.sol  OrderVault.sol
eigenvault/contracts/test/: BasicOrderVault.t.sol  EigenVaultHook.t.sol  EigenVaultIntegration.t.sol  EigenVaultServiceManager.t.sol  EigenVaultServiceManager.t.sol.complex  MassiveTestSuite.t.sol  OrderVault.t.sol  ProductionContractsTest.t.sol  SimplifiedHook.t.sol
eigenvault/lib/openzeppelin-contracts/: foundry.toml
eigenvault/operator/: Cargo.toml  config.example.yaml
eigenvault/operator/src/: main.rs
eigenvault/operator/src/config/: keys.rs  mod.rs  settings.rs
eigenvault/operator/src/ethereum/: client.rs  contracts.rs  events.rs  mod.rs
eigenvault/operator/src/matching/: engine.rs  mod.rs  orderbook.rs  privacy.rs
eigenvault/operator/src/networking/: encryption.rs  gossip.rs  mod.rs  p2p.rs
eigenvault/operator/src/proofs/: generator.rs  mod.rs  verifier.rs
eigenvault/scripts/: run-tests.sh  start-operator.sh
frontend/: .env  README.md  index.html  package-lock.json  package.json  test-frontend.sh  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: OperatorList.css  OperatorList.jsx  OrderForm.css  OrderForm.jsx  (+2 more)
scripts/: deploy-local.sh  deploy-production.sh  register-operators.sh  start-operator.sh  test-system.sh
(+42 files in other folders)
