[package]
name = "eigenvault-operator"
version = "0.1.0"
edition = "2021"
authors = ["EigenVault Team"]
description = "Off-chain operator software for EigenVault AVS"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Web3 and Ethereum (simplified for development)
# ethers = { version = "2.0", features = ["rustls", "ws"] }
# ethers-core = "2.0"
# ethers-providers = "2.0"
# ethers-signers = "2.0"
# ethers-contract = "2.0"

# Cryptography
secp256k1 = { version = "0.27", features = ["recovery", "rand"] }
sha3 = { version = "0.10", features = ["std"] }
sha2 = "0.9"
digest = "0.9"
rand = { version = "0.7", features = ["std"] }
hex = "0.4"
aes-gcm = "0.9"
chacha20poly1305 = "0.9"
rsa = { version = "0.7", features = ["std"] }
ed25519-dalek = { version = "1.0", features = ["rand_core"] }
signature = "1.0"

# Zero-knowledge proofs (simplified for development)
# arkworks-rs = "0.4"
# ark-bn254 = "0.4"
# ark-groth16 = "0.4"
# ark-serialize = "0.4"
# ark-std = "0.4"

# Networking
# libp2p = { version = "0.53", features = ["gossipsub", "mdns", "noise", "tcp", "yamux", "identify", "kad"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Database (simplified for development)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
# config = "0.13"

# Performance
rayon = "1.7"
crossbeam = "0.8"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.11"

[[bin]]
name = "eigenvault-operator"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"